// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterTextDetection /> should clear a text detection 1`] = `
.emotion-18 {
  background-color: #252525;
  border-radius: 2px;
  border: 1px solid transparent;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-18:hover {
  border: 1px solid #808080;
}

.emotion-18:hover div svg {
  visibility: visible;
}

.emotion-10 {
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 h4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  width: 100%;
  font-weight: 400;
  padding-right: 12px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-9 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-5:hover {
  background-color: #3b3b3b;
}

.emotion-5:hover svg {
  color: #ffffff;
}

.emotion-4 {
  visibility: hidden;
}

.emotion-17 {
  width: 100%;
  background-color: #191919;
}

.emotion-16 {
  padding: 16px 12px;
}

.emotion-16 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-16 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #e0e0e0;
  background-color: #2e2e2e;
  font-weight: 400;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12:hover {
  background-color: #3b3b3b;
}

.emotion-11 {
  padding-top: 1px;
  padding-left: 1px;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 42px;
  padding: 12px;
  background-color: #191919;
}

.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-14:hover svg {
  color: #ffffff;
}

.emotion-13 {
  color: #808080;
}

<div
  className="emotion-18"
>
  <div
    className="emotion-10"
  >
    <button
      aria-label="Collapse Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-9"
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-2"
          >
            analysis.zvi-text-content
          </span>
        </div>
        <button
          aria-label="Disable Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="hidden.svg"
            width={20}
          />
        </button>
        <button
          aria-label="Delete Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </h4>
  </div>
  <div
    className="emotion-17"
  >
    <div
      className="emotion-16"
    >
      <div
        className="emotion-15"
      >
        <button
          aria-label="Edit Text Detection"
          className="emotion-12"
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-11"
          >
            cats
          </span>
        </button>
        <button
          aria-label="Clear Text Detection"
          className="emotion-14"
          onClick={[Function]}
          title="Clear"
          type="button"
        >
          <svg
            className="emotion-13"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilterTextDetection /> should edit a text detection 1`] = `
.emotion-17 {
  background-color: #252525;
  border-radius: 2px;
  border: 1px solid transparent;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-17:hover {
  border: 1px solid #808080;
}

.emotion-17:hover div svg {
  visibility: visible;
}

.emotion-10 {
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 h4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  width: 100%;
  font-weight: 400;
  padding-right: 12px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-9 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-5:hover {
  background-color: #3b3b3b;
}

.emotion-5:hover svg {
  color: #ffffff;
}

.emotion-4 {
  visibility: hidden;
}

.emotion-16 {
  width: 100%;
  background-color: #191919;
}

.emotion-15 {
  padding: 16px 12px;
}

.emotion-15 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-15 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
  position: relative;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid transparent;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #2e2e2e;
  padding-left: 12px;
}

.emotion-11:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-11:hover {
  border: 1px solid #808080;
}

.emotion-11::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-11::-moz-placeholder {
  font-style: italic;
}

.emotion-11:-ms-input-placeholder {
  font-style: italic;
}

.emotion-11::placeholder {
  font-style: italic;
}

.emotion-12 {
  color: #ffffff;
}

.emotion-13 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #ffffff;
  background-color: #73b61c;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: pointer;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-10"
  >
    <button
      aria-label="Collapse Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-9"
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-2"
          >
            analysis.zvi-text-content
          </span>
        </div>
        <button
          aria-label="Disable Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="hidden.svg"
            width={20}
          />
        </button>
        <button
          aria-label="Delete Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </h4>
  </div>
  <div
    className="emotion-16"
  >
    <div
      className="emotion-15"
    >
      <form
        action=""
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="emotion-14"
        >
          <input
            className="emotion-11"
            onChange={[Function]}
            placeholder="Search text"
            type="search"
            value={
              Array [
                "cats",
              ]
            }
          />
          <button
            aria-disabled={false}
            aria-label="Search"
            className="emotion-13"
            onClick={[Function]}
            type="submit"
          >
            <svg
              className="emotion-12"
              data-file-name="search.svg"
              width={20}
            />
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<FilterTextDetection /> should select a facet 1`] = `
.emotion-17 {
  background-color: #252525;
  border-radius: 2px;
  border: 1px solid transparent;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-17:hover {
  border: 1px solid #808080;
}

.emotion-17:hover div svg {
  visibility: visible;
}

.emotion-10 {
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 h4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  width: 100%;
  font-weight: 400;
  padding-right: 12px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-9 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-5:hover {
  background-color: #3b3b3b;
}

.emotion-5:hover svg {
  color: #ffffff;
}

.emotion-4 {
  visibility: hidden;
}

.emotion-16 {
  width: 100%;
  background-color: #191919;
}

.emotion-15 {
  padding: 16px 12px;
}

.emotion-15 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-15 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
  position: relative;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid transparent;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #2e2e2e;
  padding-left: 12px;
}

.emotion-11:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-11:hover {
  border: 1px solid #808080;
}

.emotion-11::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-11::-moz-placeholder {
  font-style: italic;
}

.emotion-11:-ms-input-placeholder {
  font-style: italic;
}

.emotion-11::placeholder {
  font-style: italic;
}

.emotion-13 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

.emotion-12 {
  color: #ffffff;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-10"
  >
    <button
      aria-label="Collapse Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-9"
    >
      <div
        className="emotion-8"
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-2"
          >
            analysis.zvi-text-content
          </span>
        </div>
        <button
          aria-label="Disable Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="hidden.svg"
            width={20}
          />
        </button>
        <button
          aria-label="Delete Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </h4>
  </div>
  <div
    className="emotion-16"
  >
    <div
      className="emotion-15"
    >
      <form
        action=""
        method="post"
        onSubmit={[Function]}
      >
        <div
          className="emotion-14"
        >
          <input
            className="emotion-11"
            onChange={[Function]}
            placeholder="Search text"
            type="search"
            value=""
          />
          <button
            aria-disabled={true}
            aria-label="Search"
            className="emotion-13"
            onClick={[Function]}
            type="submit"
          >
            <svg
              className="emotion-12"
              data-file-name="search.svg"
              width={20}
            />
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
